Fix Opera wanting to align some input field text to right

--- a/sass/default.scss
+++ b/sass/default.scss
@@ -665,6 +665,7 @@ textarea {
     /* 15px / 11px */
     line-height: 1.36363636363636em;
     font-family: $font-body;
+    text-align: left;
     border: solid 1px $color-border;
     padding: .5em 5px .55em;
     background: #fff;
